updated files and folders to get project started
