# routes/index.js
@@ -1,16 +1,23 @@
 const routes = require('express').Router();
-const temple = require('./temple');
+const passport = require('passport');
 
 routes.use('/', require('./swagger'));
-routes.use('/temples', temple);
-routes.use(
-  '/',
-  (docData = (req, res) => {
-    let docData = {
-      documentationURL: 'https://nathanbirch.github.io/nathan-byui-api-docs',
-    };
-    res.send(docData);
-  })
-);
+
+// routes.get('/', (req, res) => { 
+//     //#swagger.tags=['Whats up people!']
+//     res.send('Whats up people!');
+// });
+
+routes.use('/employees', require('./employees'));
+routes.use('/facilities', require('./facilities'));
+
+routes.get('/login', passport.authenticate('github'), (req, res) => {});
+
+routes.get('/logout', function(req, res, next) {
+    req.logout(function(err) {
+        if (err) { return next(err); }
+        res.redirect('/');
+    })
+});
 
 module.exports = routes;
